--- a/docker/webserver/Dockerfile-composer
+++ b/docker/webserver/Dockerfile-composer
@@ -1,20 +1,12 @@
 FROM composer/composer:php5
 
-RUN apt-get update && \
- apt-get install -y php5-intl libicu-dev default-jre libtidy-dev && \
- rm -rf /var/lib/apt/lists/*
-
 COPY ./php.ini /usr/local/etc/php/
 
-RUN pecl install intl xdebug && \
-    docker-php-ext-install pdo_mysql pcntl gettext intl tidy && \
-    docker-php-ext-enable xdebug
+#VOLUME
+#COPY composer.json composer.lock ./
 
 WORKDIR /var/www/budget
-
-COPY composer.json composer.lock ./
-
-RUN composer install --prefer-dist --no-interaction
+#RUN composer install --prefer-dist --no-interaction
 
 ENTRYPOINT /bin/bash
 CMD ["true"]
