--- a/docker/webserver/php.ini
+++ b/docker/webserver/php.ini
@@ -501,10 +501,10 @@ xdebug.profiler_output_name = "cachegrind.out.%H%R"
 xdebug.remote_autostart = 0
 xdebug.remote_enable = 1
 xdebug.remote_handler = "dbgp"
-xdebug.remote_host = "localhost"
+xdebug.remote_host = "172.18.0.1"
 ;xdebug.remote_log = "none"
 xdebug.remote_mode = "req"
-xdebug.remote_port = 9001
+xdebug.remote_port = 9000
 ;xdebug.scream = 1
 ;xdebug.show_exception_trace = 0
 ;xdebug.show_local_vars = 1
