--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -2,8 +2,11 @@ FROM composer AS composer
 
 FROM php:7.4-apache
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends zlib1g-dev git
+
 RUN pecl install xdebug && \
-    docker-php-ext-install pdo_mysql && \
+    docker-php-ext-install pdo_mysql zip && \
     docker-php-ext-enable xdebug
 
 COPY ./php.ini /usr/local/etc/php/
