--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "Common\\": "module/Common/src/"
         }
     },
     "autoload-dev": {
