docker try to proxy pma

--- a/docker/webserver/Dockerfile
+++ b/docker/webserver/Dockerfile
@@ -12,11 +12,10 @@ RUN pecl install xdebug && \
 COPY ./php.ini /usr/local/etc/php/
 COPY ./budget.conf /etc/apache2/sites-enabled
 
-RUN a2enmod rewrite headers
+RUN a2enmod rewrite headers proxy proxy_http
 
 COPY --from=composer /usr/bin/composer /usr/bin/composer
 ENV COMPOSER_ALLOW_SUPERUSER 1
 ENV PATH="/var/www/budget/vendor/bin:${PATH}"
-RUN composer global require laminas/laminas-migration
 
 WORKDIR /var/www/budget
