--- a/docker/webserver/budget.conf
+++ b/docker/webserver/budget.conf
@@ -2,6 +2,8 @@
     ServerName budget.local
     ServerAlias budget
     DocumentRoot "/var/www/budget/public"
+    ProxyPass /pma http://phpmyadmin
+    ProxyPassReverse /pma http://phpmyadmin
 
     <Directory "/var/www/budget/public">
         Options All
