--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laminas/laminas-form": "^2.14",
         "laminas/laminas-i18n": "^2.10",
         "laminas/laminas-mvc": "^3.1",
+        "laminas/laminas-navigation": "^2.9",
         "lstrojny/functional-php": "@stable"
     },
     "require-dev": {
@@ -36,5 +37,8 @@
         "psr-4": {
             "ApplicationTest\\": "module/Application/test/"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
